--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-    "trailingComma": "es5",
+    "trailingComma": "none",
     "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
-    "printWidth": 100
+    "printWidth": 120
 }
