--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "@nftculture/nftc-open-contracts",
-  "version": "1.2.0",
-  "description": "NFTCulture Open Source Contracts Project",
-  "files": [
-    "/contracts/**/*.sol"
-  ],
-  "main": "index.js",
-  "scripts": {
-    "build": "npx hardhat compile",
-    "test": "npx hardhat test"
-  },
-  "author": "@NiftyMike",
-  "license": "MIT",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.4",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.3",
-    "hardhat": "^2.8.2",
-    "keccak256": "^1.0.6",
-    "web3": "^1.7.0"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
-    "dotenv": "^14.2.0"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
-  "repository": "git://github.com/NFTCulture/nftc-open-contracts.git"
+    "name": "@nftculture/nftc-open-contracts",
+    "version": "1.2.0",
+    "description": "NFTCulture Open Source Contracts Project",
+    "files": [
+        "/contracts/**/*.sol"
+    ],
+    "main": "index.js",
+    "scripts": {
+        "build": "npx hardhat compile",
+        "test": "npx hardhat test"
+    },
+    "author": "@NiftyMike",
+    "license": "MIT",
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.4",
+        "@nomiclabs/hardhat-etherscan": "^3.0.0",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@nomiclabs/hardhat-web3": "^2.0.0",
+        "chai": "^4.3.4",
+        "erc721a": "^4.2.3",
+        "ethereum-waffle": "^3.4.0",
+        "ethers": "^5.5.3",
+        "hardhat": "^2.8.2",
+        "keccak256": "^1.0.6",
+        "web3": "^1.7.0"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^4.6.0",
+        "dotenv": "^14.2.0"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
+    },
+    "repository": "git://github.com/NFTCulture/nftc-open-contracts.git"
 }
