--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@nftculture/nftc-open-contracts",
-    "version": "1.2.1",
+    "name": "@nftculture/nftc-contracts",
+    "version": "1.3.0",
     "description": "NFTCulture Open Source Contracts Project",
     "files": [
         "/contracts/**/*.sol"
@@ -10,27 +10,23 @@
         "build": "npx hardhat compile",
         "test": "npx hardhat test"
     },
-    "author": "@NiftyMike",
+    "author": "@NFTCulture",
     "license": "MIT",
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.0.4",
-        "@nomiclabs/hardhat-etherscan": "^3.0.0",
-        "@nomiclabs/hardhat-waffle": "^2.0.1",
-        "@nomiclabs/hardhat-web3": "^2.0.0",
-        "chai": "^4.3.4",
+        "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+        "@openzeppelin/contracts": "^4.8.0",
+        "chai": "^4.3.7",
         "erc721a": "^4.2.3",
-        "ethereum-waffle": "^3.4.0",
-        "ethers": "^5.5.3",
-        "hardhat": "^2.8.2",
+        "ethers": "^5.7.2",
+        "hardhat": "^2.12.4",
         "keccak256": "^1.0.6",
-        "web3": "^1.7.0"
+        "web3": "^1.8.1"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "^4.6.0",
-        "dotenv": "^14.2.0"
+        "dotenv": "^16.0.3"
     },
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/"
     },
-    "repository": "git://github.com/NFTCulture/nftc-open-contracts.git"
+    "repository": "git://github.com/NFTCulture/nftc-contracts.git"
 }
