Convert unit tests to typescript and gas reporter enabled by default

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "main": "index.js",
     "scripts": {
         "build": "npx hardhat compile",
-        "test": "npx hardhat test",
+        "test": "set REPORT_GAS=true && npx hardhat test",
         "pub": "npm publish",
         "pub:dry": "npm publish --dry-run"
     },
