--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "ethers": "^5.7.2",
         "hardhat": "^2.12.4",
         "keccak256": "^1.0.6",
+        "prettier": "^2.8.4",
+        "prettier-plugin-solidity": "^1.1.2",
         "web3": "^1.8.1"
     },
     "dependencies": {
