--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.3.7",
+    "version": "1.3.8",
     "description": "NFTCulture Open Source Contracts Project",
     "files": [
         "/contracts/**/*.sol"
@@ -17,6 +17,7 @@
     "author": "@NFTCulture",
     "license": "MIT",
     "devDependencies": {
+        "@defi-wonderland/smock": "^2.3.4",
         "@nomicfoundation/hardhat-toolbox": "^2.0.0",
         "@openzeppelin/contracts": "^4.8.0",
         "chai": "^4.3.7",
