--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.3.9",
+    "version": "1.4.0",
     "description": "NFTCulture Open Source Contracts Project",
     "files": [
         "/contracts/**/*.sol"
@@ -32,7 +32,9 @@
         "web3": "^1.8.1"
     },
     "dependencies": {
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "operator-filter-registry": "^1.4.1",
+        "solmate": "^6.7.0"
     },
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/"
