--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     },
     "devDependencies": {
         "@defi-wonderland/smock": "^2.3.4",
-        "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+        "@nomicfoundation/hardhat-toolbox": "^2.0.2",
         "@openzeppelin/contracts": "^4.8.0",
         "chai": "^4.3.7",
         "erc721a": "^4.2.3",
         "ethers": "^5.7.2",
-        "hardhat": "^2.12.4",
+        "hardhat": "^2.17.1",
+        "hardhat-contract-sizer": "^2.10.0",
         "keccak256": "^1.0.6",
         "open-cli": "^7.1.0",
         "prettier": "^2.8.4",
