--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.4.3",
+    "version": "1.4.4",
     "description": "NFTCulture Open Source Contracts Project",
     "author": "@NFTCulture",
-    "license": "MIT",    
-    "main": "index.js",
+    "license": "MIT",
+    "main": "dist/nftc/index.js",
+    "typings": "dist/nftc/index.d.ts",
     "scripts": {
-        "build": "npx hardhat compile",
+        "build": "run-p build:*",
+        "build:typescript": "tsc -p tsconfig.module.json",
+        "build:hardhat": "npx hardhat compile",
         "test": "npx hardhat test --typecheck --parallel",
         "test:gas": "set REPORT_GAS=true && npx hardhat test",
         "test:coverage": "npx hardhat coverage",
@@ -19,23 +22,24 @@
         "@nomicfoundation/hardhat-toolbox": "^2.0.2",
         "@openzeppelin/contracts": "^4.9.3",
         "chai": "^4.3.7",
+        "dotenv": "^16.3.1",
         "erc721a": "^4.2.3",
         "ethers": "^5.7.2",
         "hardhat": "^2.17.1",
         "hardhat-contract-sizer": "^2.10.0",
         "keccak256": "^1.0.6",
+        "npm-run-all": "^4.1.5",
         "open-cli": "^7.1.0",
+        "operator-filter-registry": "^1.4.2",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
-        "web3": "^1.10.0"
-    },
-    "dependencies": {
-        "dotenv": "^16.3.1",
-        "operator-filter-registry": "^1.4.2",
-        "solmate": "^6.7.0"
+        "solmate": "^6.7.0",
+        "web3": "^1.10.0",
+        "web3-utils": "^4.0.3"
     },
     "files": [
         "/contracts/**/*.sol",
+        "/dist/nftc",
         "CHANGELOG.md",
         "LICENSE",
         "README.md"
