## Version -- 1.4.8 - Clean before build with shx, to prevent stale files showing up in package. - Use create-ts-index util to generate index files so typescript module works properly. - small bug fix to HardhatHelpers - Plug in ESLint checks and Prettier formatting as a build step (but don't run yet)

--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.4.7",
+    "version": "1.4.8",
     "description": "NFTCulture Open Source Contracts Project",
     "author": "@NFTCulture",
     "license": "MIT",
     "main": "dist/nftc/index.js",
     "typings": "dist/nftc/index.d.ts",
     "scripts": {
+        "build-ts:clean": "shx rm -rf dist",
+        "build-ts:create-index": "cti -b create ./src",
+        "build-ts:compile": "tsc -p tsconfig.module.json --declaration",
         "build": "run-p build:*",
-        "build:typescript": "tsc -p tsconfig.module.json",
+        "build:ts-module": "run-s build-ts:*",
         "build:hardhat": "npx hardhat compile",
+        "fix": "run-s fix:*",
+        "fix:prettier-sol": "prettier \"contracts/**/*.sol\" --write",
+        "fix:prettier-ts": "prettier \"src/**/*.ts\" --write",
+        "fix:lint": "eslint src --ext .ts --fix",
         "test": "npx hardhat test --typecheck --parallel",
         "test:np": "npx hardhat test --typecheck",
         "test:gas": "set REPORT_GAS=true && npx hardhat test",
@@ -23,8 +30,13 @@
         "@nomicfoundation/hardhat-toolbox": "^2.0.2",
         "@openzeppelin/contracts": "^4.9.3",
         "chai": "^4.3.7",
+        "create-ts-index": "^1.14.0",
         "dotenv": "^16.3.1",
         "erc721a": "^4.2.3",
+        "eslint": "^8.34.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-eslint-comments": "^3.2.0",
+        "eslint-plugin-import": "^2.26.0",
         "ethers": "^5.7.2",
         "hardhat": "^2.17.1",
         "hardhat-contract-sizer": "^2.10.0",
@@ -34,6 +46,7 @@
         "operator-filter-registry": "^1.4.2",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
+        "shx": "^0.3.4",
         "solmate": "^6.7.0",
         "web3": "^1.10.0",
         "web3-utils": "^4.0.3"
