update to typescript 5.2.2

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "prettier-plugin-solidity": "^1.1.3",
         "shx": "^0.3.4",
         "solmate": "^6.7.0",
+        "typescript": "^5.2.2",
         "web3": "^1.10.0",
         "web3-utils": "^4.0.3"
     },
