--- a/.github/workflows/nftc-contracts-publish-github.yml
+++ b/.github/workflows/nftc-contracts-publish-github.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Clean install
         run: npm ci
 
+      - name: Build Contracts
+        run: npm run build
+
       - name: Publish Library
         env:
           NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
