--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.5.9",
+    "version": "1.5.11",
     "description": "NFTCulture Open Source Contracts Project",
     "author": "@NFTCulture",
     "license": "MIT",
@@ -34,6 +34,7 @@
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "@typescript-eslint/parser": "^5.51.0",
         "chai": "^4.3.7",
+        "chalk": "^4.1.2",
         "create-ts-index": "^1.14.0",
         "dotenv": "^16.3.1",
         "erc721a": "^4.2.3",
