--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@defi-wonderland/smock": "^2.3.5",
         "@nomicfoundation/hardhat-toolbox": "^2.0.2",
         "@openzeppelin/contracts": "^4.9.3",
+        "@types/sinon": "^17.0.2",
         "@typescript-eslint/eslint-plugin": "^5.51.0",
         "@typescript-eslint/parser": "^5.51.0",
         "chai": "^4.3.7",
@@ -52,6 +53,7 @@
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
         "shx": "^0.3.4",
+        "sinon": "^17.0.1",
         "solmate": "^6.7.0",
         "typescript": "^5.2.2",
         "web3": "^1.10.0",
