--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "@nftculture/nftc-contracts",
-    "version": "1.5.24",
+    "version": "2.0.0",
     "description": "NFTCulture Open Source Contracts Project",
     "author": "@NFTCulture",
     "license": "MIT",
     "main": "dist/nftc/index.js",
     "typings": "dist/nftc/index.d.ts",
     "scripts": {
+        "typecheck":"tsc -p tsconfig.module.json --noEmit",
         "build-ts:clean": "shx rm -rf dist",
         "build-ts:create-index": "cti -b create ./src",
         "build-ts:compile": "tsc -p tsconfig.module.json --declaration",
@@ -28,12 +29,11 @@
         "pub:dry": "run-s fix build test publish:dry"
     },
     "devDependencies": {
-        "@defi-wonderland/smock": "^2.3.5",
-        "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+        "@nomicfoundation/hardhat-toolbox": "^6.1.0",
         "@openzeppelin/contracts": "^4.9.5",
         "@types/sinon": "^17.0.2",
-        "@typescript-eslint/eslint-plugin": "^5.51.0",
-        "@typescript-eslint/parser": "^5.51.0",
+        "@typescript-eslint/eslint-plugin": "^8.46.2",
+        "@typescript-eslint/parser": "^8.46.2",
         "chai": "^4.3.7",
         "chalk": "^4.1.2",
         "create-ts-index": "^1.14.0",
@@ -43,8 +43,8 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-import": "^2.26.0",
-        "ethers": "^5.7.2",
-        "hardhat": "^2.17.1",
+        "ethers": "^6.15.0",
+        "hardhat": "^2.26.5",
         "hardhat-contract-sizer": "^2.10.0",
         "keccak256": "^1.0.6",
         "npm-run-all": "^4.1.5",
@@ -55,13 +55,14 @@
         "shx": "^0.3.4",
         "sinon": "^17.0.1",
         "solmate": "^6.7.0",
-        "typescript": "^5.2.2",
+        "typescript": "^5.9.3",
         "web3": "^1.10.0",
         "web3-utils": "^4.0.3"
     },
     "files": [
         "/contracts/**/*.sol",
         "/dist/nftc",
+        "/docs",
         "CHANGELOG.md",
         "LICENSE",
         "README.md"
