--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -7,7 +7,7 @@
         "esModuleInterop": true,
         "declaration": true,
         "inlineSourceMap": true,
-        "types": ["@nomicfoundation/hardhat-toolbox", "@nomiclabs/hardhat-ethers"]
+        "types": ["@nomicfoundation/hardhat-toolbox"]
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules/**"]
